Add Claude automation prompts and update export scripts
- Add 7 new Claude prompt files for common development tasks:
  - add-release.md: Automates npm package release setup
  - cleanup-work.md: Reviews and cleans up code changes
  - rebrand-cli.md: Rebrands CommanderJS template projects
  - rebrand-ui.md: Rebrands NextJS template projects
  - strip-comments.md: Removes non-critical code comments
  - summarize-project.md: Generates detailed project summaries
  - summarize-work.md: Summarizes code changes and their impact

- Update package.json export scripts to copy Claude prompts to ~/.claude/commands
- Change nodemon watch pattern from yaml to md files
- Prompts are now automatically available as Claude commands after running export scripts

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "prompts",
   "private": true,
   "scripts": {
-    "export-prompts": "context-composer export --force --commands-path ~/.claude/commands work-*.md",
-    "export-prompts:watch": "nodemon --ext yaml --watch . --exec \"context-composer export --force --commands-path ~/.claude/commands work-*.md\""
+    "copy-claude-commands": "mkdir -p ~/.claude/commands && cp claude/*.md ~/.claude/commands/",
+    "export-prompts": "npm run copy-claude-commands && context-composer export --force --commands-path ~/.claude/commands work-*.md",
+    "export-prompts:watch": "nodemon --ext md --watch . --exec \"npm run copy-claude-commands && context-composer export --force --commands-path ~/.claude/commands work-*.md\""
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
